[gd_scene load_steps=23 format=2]

[ext_resource path="res://Chest/ChestOpenBg.png" type="Texture" id=1]
[ext_resource path="res://Chest/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Sundowner.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Chest/ChestOpen.gd" type="Script" id=4]
[ext_resource path="res://Chest/Card.png" type="Texture" id=5]
[ext_resource path="res://Fonts/SemiBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Chest/Loot.gd" type="Script" id=7]
[ext_resource path="res://Chest/Coins.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="DynamicFont" id=15]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 640, 360 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ChestAnimation" type="AnimatedSprite" parent="Bg"]
visible = false
position = Vector2( 640, 414 )
frames = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton" type="TextureButton" parent="Bg"]
margin_left = 515.0
margin_top = 289.0
margin_right = 765.0
margin_bottom = 539.0
mouse_filter = 2
toggle_mode = true
texture_normal = SubResource( 9 )
texture_pressed = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cards" type="TextureRect" parent="Bg/TextureButton"]
visible = false
margin_left = 184.0
margin_top = 194.0
margin_right = 216.0
margin_bottom = 233.0
texture = ExtResource( 5 )
expand = true

[node name="Text" type="Label" parent="Bg/TextureButton/Cards"]
margin_right = 32.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 15 )
text = "0"
align = 1
valign = 1

[node name="Label" type="Label" parent="Bg"]
margin_left = 440.0
margin_top = 560.0
margin_right = 840.0
margin_bottom = 635.0
custom_fonts/font = SubResource( 14 )
align = 1
valign = 1

[node name="Loot" type="TextureRect" parent="Bg"]
visible = false
margin_left = 565.0
margin_top = 173.0
margin_right = 715.0
margin_bottom = 323.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
script = ExtResource( 7 )

[node name="Count" type="Label" parent="Bg/Loot"]
margin_left = -125.0
margin_top = -83.0
margin_right = 275.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 16 )
text = "56"
align = 1
valign = 1

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 640, 360 )
shape = SubResource( 11 )

[connection signal="animation_finished" from="Bg/ChestAnimation" to="." method="_on_ChestAnimation_animation_finished"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
